k3s/resume-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-service
  namespace: default
spec:
  selector:
    app: resume
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
