k3s/resume-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: resume.n3rd-lab.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: resume-service
            port:
              number: 80
